2020-01-14  Jonathan Bedard  <jbedard@apple.com>

        test-webkitpy: Make json file creation Python 3 compatible
        https://bugs.webkit.org/show_bug.cgi?id=206255

        Reviewed by Aakash Jain.

        * Scripts/webkitpy/test/main.py:
        (_print_results_as_json): Convert maps to lists.

2020-01-14  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r254533 and r254535.
        https://bugs.webkit.org/show_bug.cgi?id=206263

        Breaks iOS and macOS builds (Requested by ryanhaddad on
        #webkit).

        Reverted changesets:

        "[WebAuthn] Implement SPI to tell UI clients to select
        assertion responses"
        https://bugs.webkit.org/show_bug.cgi?id=206112
        https://trac.webkit.org/changeset/254533

        "Unreviewed, a build fix after r254533"
        https://trac.webkit.org/changeset/254535

2020-01-14  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Keyboard input is severely delayed after switching away from unresponsive tab
        https://bugs.webkit.org/show_bug.cgi?id=206242
        <rdar://problem/57132891>

        Reviewed by Tim Horton.

        Add a couple of new API tests: (1) verify that the key event completion handler can still be invoked in an
        unresponsive web view after resigning first responder, and (2) verify that we'll try to wait for the current
        key event to be processed in a web view, if it remains the first responder.

        * TestWebKitAPI/Tests/ios/KeyboardInputTestsIOS.mm:

2020-01-10  Jiewen Tan  <jiewen_tan@apple.com>

        [WebAuthn] Implement SPI to tell UI clients to select assertion responses
        https://bugs.webkit.org/show_bug.cgi?id=206112
        <rdar://problem/58495733>

        Reviewed by Alex Christensen.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm: