@@ -1,3 +1,14 @@
+2020-01-14  Aakash Jain  <aakash_jain@apple.com>
+
+        [EWS] Status bubble tooltip might display success message sometimes on a failed build
+        https://bugs.webkit.org/show_bug.cgi?id=206180
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-app/ews/views/statusbubble.py:
+        (StatusBubble._build_bubble):
+        (StatusBubble._most_recent_failure_message): Returns the status from failed step instead of last step.
+
 2020-01-14  Jonathan Bedard  <jbedard@apple.com>
 
         test-webkitpy: Make json file creation Python 3 compatible
